# glfw-vscode-cmake-setup

./: CMakeLists.txt  main.c
